--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,10 +27,10 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
 
-  - repo: https://github.com/bridgecrewio/checkov.git
-    rev: '1.0.864' # change to tag or sha
-    hooks:
-    - id: checkov
-      verbose: true
-      args:
-      - -d . --framework terraform -o output_format json
+#   - repo: https://github.com/bridgecrewio/checkov.git
+#     rev: '1.0.864' # change to tag or sha
+#     hooks:
+#     - id: checkov
+#       verbose: true
+#       args:
+#       - -d . --framework terraform -o output_format json
