--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ repos:
   - repo: git://github.com/antonbabenko/pre-commit-terraform
     rev: v1.48.0
     hooks:
-      - id: terraform_fmt
+   #   - id: terraform_fmt
 #      - id: terraform_validate
       - id: terraform_tflint
         args:
@@ -17,7 +17,7 @@ repos:
           - '--args=--only=terraform_naming_convention'
           - '--args=--only=terraform_required_providers'
 #          - '--args=--only=terraform_standard_module_structure'
-          - '--args=--only=terraform_workspace_remote'
+    #      - '--args=--only=terraform_workspace_remote'
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
