--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,7 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
-      - id: trailing-whitespace
+     # - id: trailing-whitespace
       - id: check-merge-conflict
       - id: end-of-file-fixer
       - id: check-yaml
